--- a/css/main.css
+++ b/css/main.css
@@ -498,7 +498,7 @@ body {
   width: 337px;
   height: 100vh;
   top: 0;
-  right: 300px;
+  left: 300px;
   z-index: 5;
   padding-top: 48px;
   padding-bottom: 48px;
