--- a/css/main.css
+++ b/css/main.css
@@ -350,36 +350,18 @@ body {
   width: 100%;
   top: 0;
   left: 0;
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-@media screen and (min-width: 1200px) {
-  .header {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-container {
   display: flex;
   align-items: center;
-  height: 78px;
 }
 
 .header-navigation {
   display: flex;
   align-items: center;
-}
-@media screen and (max-width: 768px) {
-  .header-navigation {
-    justify-content: space-between;
-    width: 100%;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .header-navigation {
-    align-items: flex-start;
-  }
 }
 
 .header-list {
@@ -415,6 +397,16 @@ body {
 .header-link:hover, .header-link:focus {
   color: var(--accent-color);
 }
+.header-link.current::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: -48px;
+}
 
 .header-connect {
   display: flex;
@@ -432,7 +424,7 @@ body {
 
 .header-logo {
   fill: #ffffff;
-  margin-left: 31px;
+  margin-right: auto;
 }
 @media screen and (min-width: 768px) {
   .header-logo {
@@ -466,19 +458,21 @@ body {
 }
 @media screen and (min-width: 768px) {
   .header-btn {
-    display: inline;
+    display: block;
     color: var(--first-button-color);
     margin-left: 40px;
   }
 }
 
 .open-menu-btn {
+  display: block;
   width: 40px;
   height: 40px;
   background-color: transparent;
   border: none;
+  margin-left: auto;
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .open-menu-btn {
     display: none;
   }
@@ -498,7 +492,7 @@ body {
   width: 337px;
   height: 100vh;
   top: 0;
-  left: 143px;
+  right: 0;
   z-index: 5;
   padding-top: 48px;
   padding-bottom: 48px;
@@ -652,10 +646,20 @@ body {
 }
 .hero-container {
   display: flex;
+  padding: 0;
+}
+@media screen and (max-width: 768px) {
+  .hero-container {
+    width: 100%;
+  }
 }
 
 .hero-left {
+  width: 93px;
   display: none;
+  align-items: flex-end;
+  padding-left: 23px;
+  padding-bottom: 40px;
 }
 @media screen and (min-width: 768px) {
   .hero-left {
@@ -708,17 +712,32 @@ body {
   padding-left: 31px;
   padding-bottom: 183px;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-right {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../../img/mobile-slider-img-3-2x.jpg);
+  }
+}
 @media screen and (min-width: 768px) {
   .hero-right {
     padding-top: 272px;
     padding-bottom: 206px;
     padding-left: 96px;
-    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../img/tablet-slider-img-3.jpg);
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../../img/tablet-slider-img-3.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero-right {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../../img/tablet-slider-img-3-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero-right {
-    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../img/hero-bg.jpg);
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../../img/hero-bg.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero-right {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../../img/tablet-slider-img-3-2x.jpg);
   }
 }
 
@@ -737,7 +756,7 @@ body {
   font-family: Raleway;
   font-weight: 700;
   font-size: 48px;
-  line-height: 1.18;
+  line-height: 1.1666666667;
   letter-spacing: 0.05em;
   color: var(--main-title-color);
   margin-bottom: 20px;
@@ -859,7 +878,7 @@ body {
   background-image: url(../img/prices-bg-mob.png);
   background-color: #111319;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   margin: 0 auto;
 }
@@ -906,7 +925,7 @@ body {
 }
 
 .prices-list {
-  width: 418px;
+  max-width: 100%;
   padding: 30px 30px;
 }
 @media screen and (min-width: 768px) {
@@ -945,17 +964,14 @@ body {
   margin-bottom: 0;
 }
 
-.prices-item::before {
+.prices-item-text::after {
   content: "";
   flex-grow: 1;
   height: 1px;
   background-color: rgba(157, 164, 189, 0.12);
   margin-left: 6px;
   margin-right: 6px;
-}
-
-.prices-item-description {
-  order: -1;
+  display: inline-block;
 }
 
 .prices-item-text {
@@ -977,7 +993,7 @@ body {
 }
 
 .reasons {
-  padding: 42px 0;
+  padding: 84px 0 42px 0;
 }
 @media screen and (min-width: 768px) {
   .reasons {
@@ -986,7 +1002,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .reasons {
-    padding: 130px 0;
+    padding: 130px 0 65px 0;
   }
 }
 
@@ -1116,8 +1132,8 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .masters {
-    padding-top: 130px;
-    padding-bottom: 130px;
+    padding-top: 65px;
+    padding-bottom: 65px;
   }
 }
 
@@ -1225,16 +1241,16 @@ body {
 }
 
 .gallery {
-  padding: 84px 0;
+  padding: 42px 0 84px 0;
 }
 @media screen and (min-width: 768px) {
   .gallery {
-    padding: 100px 0;
+    padding: 50px 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .gallery {
-    padding-top: 130px;
+    padding-top: 65px;
     padding-bottom: 130px;
   }
 }
@@ -1252,22 +1268,27 @@ img {
 
 .gallery-list {
   margin-bottom: -30px;
+  margin-right: -30px;
 }
 @media screen and (min-width: 768px) {
   .gallery-list {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery-list {
+    flex-wrap: nowrap;
   }
 }
 
 .gallery-item {
   margin-bottom: 30px;
+  margin-right: 30px;
 }
 @media screen and (min-width: 768px) {
   .gallery-item {
-    width: calc(50% - 30px);
-    margin-left: 30px;
+    max-width: 330px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1285,6 +1306,11 @@ img {
   display: flex;
 }
 
+@media screen and (max-width: 768px) {
+  .online-container {
+    width: 100%;
+  }
+}
 @media screen and (min-width: 1200px) {
   .online-container {
     display: flex;
@@ -1467,8 +1493,12 @@ img {
   font-size: 18px;
   line-height: 1.67;
   letter-spacing: 0.02em;
-  text-align: center;
   color: var(--second-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .contacts-link {
+    text-align: center;
+  }
 }
 
 .contacts-icon {
