--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -46,8 +46,10 @@
     font-size: 18px;
     line-height: 1.67;
     letter-spacing: 0.02em;
-    text-align: center;
     color: var(--second-text-color);
+    @media screen and (min-width: 1200px) {
+        text-align: center;
+    }
 }
 
 .contacts-icon{
