--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,7 @@
+// .footer{
+//     margin: 0 auto;
+   
+// }
 .footer-container {
     display: flex;
     flex-direction: column-reverse;
@@ -7,6 +11,7 @@
             flex-direction: row;
             align-items: center;
             padding: 57px 31px 55px 31px;
+
         }
 }
 
