--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,10 +1,10 @@
 .gallery {
-    padding: 84px 0;
+    padding: 42px 0 84px 0;
     @media screen and (min-width: 768px) {
-        padding: 100px 0;
+        padding: 50px 0;
     }
     @media screen and (min-width: 1200px) {
-        padding-top: 130px;
+        padding-top: 65px;
         padding-bottom: 130px;
     }
 }
@@ -22,18 +22,22 @@ img {
 
 .gallery-list {
     margin-bottom: -30px;
+    margin-right: -30px;
         @media screen and (min-width: 768px) {
             display: flex;
             flex-wrap: wrap;
-            margin-left: -30px;
+        }
+        @media screen and (min-width: 1200px) {
+            flex-wrap: nowrap;
         }
 }
 
 .gallery-item {
     margin-bottom: 30px;
+    margin-right: 30px;
         @media screen and (min-width: 768px) {
-            width: calc(100% / 2 - 30px);
-            margin-left: 30px;
+            // width: calc(100% / 2 - 30px);
+            max-width: 330px;
         }
     
         @media screen and (min-width: 1200px) {
