--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,31 +3,25 @@
     width: 100%;
     top: 0;
     left: 0;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    @media screen and (min-width: 1200px){
-        padding-top: 32px;
-        padding-bottom: 32px;
-    }
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .header-container {
     display: flex;
     align-items: center;
-    height: 78px;
-
 }
 
 .header-navigation {
-    display: flex;
-    align-items: center;
-    @media screen and (max-width: 768px) {
-        justify-content: space-between;
-        width: 100%;
-    }
-    @media screen and (max-width: 1200px){
-            align-items: flex-start;
-    }
+        display: flex;
+        align-items: center;
+    // @media screen and (max-width: 768px) {
+    //     justify-content: space-between;
+    //     width: 100%;
+    // }
+    // @media screen and (max-width: 1200px){
+    //         align-items: flex-start;
+    // }
 }
 
 .header-list {
@@ -55,25 +49,30 @@
     color: var(--header-text-color);
     transition: color 300ms linear;
     position: relative;
+    
     &:hover,
     &:focus {
-        color: var(--accent-color);
+            color: var(--accent-color);
     }
-
-    // &.current::after {
-    //     content: "";
-    //     width: 100%;
-    //     height: 4px;
-    //     background-color: var(--accent-color);
-    //     border-radius: 10px;
-    //     position: absolute;
-    //     left: 0;
-    //     bottom: -48px;
-    // }
+    
+    &.current::after {
+        content: "";
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        border-radius: 10px;
+        position: absolute;
+        left: 0;
+        bottom: -48px;
+    }
 }
 
 
+
 .header-connect {
+    // margin-left: auto;
+    // padding-right: 10px;
+    // display: none;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -87,7 +86,7 @@
 
 .header-logo {
     fill: #ffffff;
-    margin-left: 31px;
+    margin-right: auto;
         @media screen and (min-width: 768px) {
             margin-right: 70px;
             margin-left: 0;
@@ -116,18 +115,20 @@
 .header-btn {
      display: none;
         @media screen and (min-width: 768px) {
-                display: inline;
+                display: block;
                 color: var(--first-button-color);
                 margin-left: 40px;
             }
 }
 
 .open-menu-btn {
+    display: block;
     width: 40px;
     height: 40px;
     background-color: transparent;
     border: none;
-    @media screen and (min-width: 767px) {
+    margin-left: auto;
+    @media screen and (min-width: 768px) {
         display: none;
     }
 }
@@ -147,7 +148,7 @@
     width: 337px;
     height: 100vh;
     top: 0;
-    left: 143px;
+    right: 0;
     z-index: 5;
     padding-top: 48px;
     padding-bottom: 48px;
