--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,9 +1,18 @@
 .hero-container {
     display: flex;
+    padding: 0;
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
+    
 }
 
 .hero-left {
-    display: none;
+        width: 93px;
+        display: none;
+        align-items: flex-end;
+        padding-left: 23px;
+        padding-bottom: 40px;
         @media screen and (min-width: 768px) {
             width: 93px;
             display: flex;
@@ -60,19 +69,37 @@
     padding-top: 208px;
     padding-left: 31px;
     padding-bottom: 183px;
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(rgba(25, 28, 38, 0.2),
+            rgba(25, 28, 38, 0.2)), url(../../img/mobile-slider-img-3-2x.jpg)
+        }
         @media screen and (min-width: 768px){
             padding-top: 272px;
             padding-bottom: 206px;
             padding-left: 96px;
             background-image: linear-gradient(rgba(25, 28, 38, 0.2),
                         rgba(25, 28, 38, 0.2)),
-                    url(../img/tablet-slider-img-3.jpg);
+                    url(../../img/tablet-slider-img-3.jpg);
+        @media screen and (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: linear-gradient(rgba(25, 28, 38, 0.2),
+                        rgba(25, 28, 38, 0.2)), url(../../img/tablet-slider-img-3-2x.jpg)
         }
+    }
         @media screen and (min-width: 1200px) {
             background-image: linear-gradient(rgba(25, 28, 38, 0.2),
                         rgba(25, 28, 38, 0.2)),
-                    url(../img/hero-bg.jpg);   
+                    url(../../img/hero-bg.jpg);
+            @media screen and (min-device-pixel-ratio: 2),
+                    (min-resolution: 192dpi),
+                    (min-resolution: 2dppx) {
+                background-image: linear-gradient(rgba(25, 28, 38, 0.2),
+                rgba(25, 28, 38, 0.2)), url(../../img/tablet-slider-img-3-2x.jpg)
         }
+    }      
 }
 
 .hero-pre-title {
@@ -90,7 +117,7 @@
     font-family: Raleway;
     font-weight: 700;
     font-size: 48px;
-    line-height: 1.18;
+    line-height: calc(56 / 48);
     letter-spacing: 0.05em;
     color: var(--main-title-color);
     margin-bottom: 20px;
@@ -106,3 +133,4 @@
         max-width: 306px;
     }
 }
+      
