--- a/sass/layout/_online.scss
+++ b/sass/layout/_online.scss
@@ -1,4 +1,7 @@
 .online-container{
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
     @media screen and (min-width: 1200px) {
         display: flex;
     }
