--- a/sass/layout/_prices.scss
+++ b/sass/layout/_prices.scss
@@ -5,7 +5,7 @@
     background-image: url(../img/prices-bg-mob.png);
     background-color: #111319;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     margin: 0 auto;
     @media screen and (min-width: 768px) {
@@ -47,9 +47,8 @@
 }
 
 .prices-list {
-    width: 418px;
+    max-width: 100%;
     padding: 30px 30px;
-
     @media screen and (min-width: 768px) {
         width: 690px;
         padding: 30px 40px;
@@ -60,6 +59,7 @@
 }
 
 .prices-list-light {
+
     background: linear-gradient(180deg,
         #171a24 0%, 
         rgba(23, 26, 36, 0.2) 100%);
@@ -88,17 +88,14 @@
     margin-bottom: 0;
 }
 
-.prices-item::before {
-    content: "";
+.prices-item-text::after {
+ content: "";
     flex-grow: 1;
     height: 1px;
     background-color: rgba(157, 164, 189, 0.12);
     margin-left: 6px;
     margin-right: 6px;
-}
-
-.prices-item-description {
-    order: -1;
+    display: inline-block;
 }
 
 .prices-item-text {
