--- a/sass/layout/_reasons.scss
+++ b/sass/layout/_reasons.scss
@@ -1,10 +1,10 @@
 .reasons {
-    padding: 42px 0;
+    padding: 84px 0 42px 0;
     @media screen and (min-width: 768px) {
         padding: 50px 0;
     }
     @media screen and (min-width: 1200px) {
-        padding: 130px 0;
+        padding: 130px 0 65px 0;
     }
     
 }
